@@ -5,6 +5,7 @@ Revision history for Driver::Neo4j
  - make Cypher type system customisable
  - add experimental filter to convert {param} to $param in Cypher queries
  - new syntax to specify the network timeout and other config options
+ - allow strings containing just the protocol scheme be used as URIs
  - deprecate experimental close() method
  - deprecate experimental suppression of exceptions (die_on_error = 0)
 
